parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instruction_set
Rule 2     instruction -> expression
Rule 3     instruction -> conditional
Rule 4     instruction -> loopconditional
Rule 5     instruction_set -> instruction instruction_set
Rule 6     instruction_set -> { instruction_set }
Rule 7     instruction_set -> <empty>
Rule 8     identifier -> ID
Rule 9     identifier -> address
Rule 10    expression -> assignment ;
Rule 11    expression -> operation ;
Rule 12    assignment -> identifier = operand
Rule 13    assignment -> identifier = operation
Rule 14    assignment -> identifier assignoperation operand
Rule 15    assignment -> identifier assignoperation operation
Rule 16    operation -> operand operator operand
Rule 17    operation -> operand operator operation
Rule 18    operation -> function ( operand )
Rule 19    operation -> function ( operation )
Rule 20    operation -> reservedoperation
Rule 21    operation -> operand selfoperator
Rule 22    assignoperation -> ADDASSIGN
Rule 23    assignoperation -> SUBASSIGN
Rule 24    assignoperation -> MULASSIGN
Rule 25    assignoperation -> DIVASSIGN
Rule 26    operand -> identifier
Rule 27    operand -> number
Rule 28    operand -> structure
Rule 29    operand -> - operand
Rule 30    operand -> address
Rule 31    operator -> +
Rule 32    operator -> -
Rule 33    operator -> *
Rule 34    operator -> /
Rule 35    operator -> DOTADD
Rule 36    operator -> DOTSUB
Rule 37    operator -> DOTMUL
Rule 38    operator -> DOTDIV
Rule 39    selfoperator -> '
Rule 40    function -> ZEROS
Rule 41    function -> ONES
Rule 42    function -> EYE
Rule 43    reservedoperation -> RETURN operation
Rule 44    reservedoperation -> RETURN operand
Rule 45    reservedoperation -> RETURN
Rule 46    reservedoperation -> PRINT series
Rule 47    reservedoperation -> PRINT operation
Rule 48    reservedoperation -> PRINT operand
Rule 49    reservedoperation -> BREAK
Rule 50    reservedoperation -> CONTINUE
Rule 51    relation -> EQ
Rule 52    relation -> NOTEQ
Rule 53    relation -> LESS
Rule 54    relation -> LESSEQ
Rule 55    relation -> MORE
Rule 56    relation -> MOREEQ
Rule 57    condition -> operand relation operand
Rule 58    condition -> operation relation operand
Rule 59    condition -> operand relation operation
Rule 60    condition -> operation relation operation
Rule 61    conditional -> IF ( condition ) instruction
Rule 62    conditional -> IF ( condition ) { instruction_set }
Rule 63    conditional -> IF ( condition ) instruction ELSE instruction
Rule 64    conditional -> IF ( condition ) { instruction_set } ELSE instruction
Rule 65    conditional -> IF ( condition ) instruction ELSE { instruction_set }
Rule 66    conditional -> IF ( condition ) { instruction_set } ELSE { instruction_set }
Rule 67    loopconditional -> WHILE ( condition ) instruction
Rule 68    loopconditional -> WHILE ( condition ) { instruction_set }
Rule 69    loopconditional -> FOR identifier = range instruction
Rule 70    loopconditional -> FOR identifier = range { instruction_set }
Rule 71    range -> operand : operand
Rule 72    structure -> matrix
Rule 73    structure -> STRING
Rule 74    matrix -> rows
Rule 75    matrix -> [ rows ]
Rule 76    rows -> [ series ]
Rule 77    rows -> [ series ] , rows
Rule 78    series -> operand
Rule 79    series -> operand , series
Rule 80    integer_series -> number
Rule 81    integer_series -> number , integer_series
Rule 82    number -> INTNUM
Rule 83    number -> FLOATNUM
Rule 84    address -> identifier [ integer_series ]

Terminals, with rules where they appear

'                    : 39
(                    : 18 19 61 62 63 64 65 66 67 68
)                    : 18 19 61 62 63 64 65 66 67 68
*                    : 33
+                    : 31
,                    : 77 79 81
-                    : 29 32
/                    : 34
:                    : 71
;                    : 10 11
=                    : 12 13 69 70
ADDASSIGN            : 22
BREAK                : 49
CONTINUE             : 50
DIVASSIGN            : 25
DOTADD               : 35
DOTDIV               : 38
DOTMUL               : 37
DOTSUB               : 36
ELSE                 : 63 64 65 66
EQ                   : 51
EYE                  : 42
FLOATNUM             : 83
FOR                  : 69 70
ID                   : 8
IF                   : 61 62 63 64 65 66
INTNUM               : 82
LESS                 : 53
LESSEQ               : 54
MORE                 : 55
MOREEQ               : 56
MULASSIGN            : 24
NOTEQ                : 52
ONES                 : 41
PRINT                : 46 47 48
RETURN               : 43 44 45
STRING               : 73
SUBASSIGN            : 23
WHILE                : 67 68
ZEROS                : 40
[                    : 75 76 77 84
]                    : 75 76 77 84
error                : 
{                    : 6 62 64 65 66 66 68 70
}                    : 6 62 64 65 66 66 68 70

Nonterminals, with rules where they appear

address              : 9 30
assignment           : 10
assignoperation      : 14 15
condition            : 61 62 63 64 65 66 67 68
conditional          : 3
expression           : 2
function             : 18 19
identifier           : 12 13 14 15 26 69 70 84
instruction          : 5 61 63 63 64 65 67 69
instruction_set      : 1 5 6 62 64 65 66 66 68 70
integer_series       : 81 84
loopconditional      : 4
matrix               : 72
number               : 27 80 81
operand              : 12 14 16 16 17 18 21 29 44 48 57 57 58 59 71 71 78 79
operation            : 11 13 15 17 19 43 47 58 59 60 60
operator             : 16 17
range                : 69 70
relation             : 57 58 59 60
reservedoperation    : 20
rows                 : 74 75 77
selfoperator         : 21
series               : 46 76 77 79
start                : 0
structure            : 28

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instruction_set
    (5) instruction_set -> . instruction instruction_set
    (6) instruction_set -> . { instruction_set }
    (7) instruction_set -> .
    (2) instruction -> . expression
    (3) instruction -> . conditional
    (4) instruction -> . loopconditional
    (10) expression -> . assignment ;
    (11) expression -> . operation ;
    (61) conditional -> . IF ( condition ) instruction
    (62) conditional -> . IF ( condition ) { instruction_set }
    (63) conditional -> . IF ( condition ) instruction ELSE instruction
    (64) conditional -> . IF ( condition ) { instruction_set } ELSE instruction
    (65) conditional -> . IF ( condition ) instruction ELSE { instruction_set }
    (66) conditional -> . IF ( condition ) { instruction_set } ELSE { instruction_set }
    (67) loopconditional -> . WHILE ( condition ) instruction
    (68) loopconditional -> . WHILE ( condition ) { instruction_set }
    (69) loopconditional -> . FOR identifier = range instruction
    (70) loopconditional -> . FOR identifier = range { instruction_set }
    (12) assignment -> . identifier = operand
    (13) assignment -> . identifier = operation
    (14) assignment -> . identifier assignoperation operand
    (15) assignment -> . identifier assignoperation operation
    (16) operation -> . operand operator operand
    (17) operation -> . operand operator operation
    (18) operation -> . function ( operand )
    (19) operation -> . function ( operation )
    (20) operation -> . reservedoperation
    (21) operation -> . operand selfoperator
    (8) identifier -> . ID
    (9) identifier -> . address
    (26) operand -> . identifier
    (27) operand -> . number
    (28) operand -> . structure
    (29) operand -> . - operand
    (30) operand -> . address
    (40) function -> . ZEROS
    (41) function -> . ONES
    (42) function -> . EYE
    (43) reservedoperation -> . RETURN operation
    (44) reservedoperation -> . RETURN operand
    (45) reservedoperation -> . RETURN
    (46) reservedoperation -> . PRINT series
    (47) reservedoperation -> . PRINT operation
    (48) reservedoperation -> . PRINT operand
    (49) reservedoperation -> . BREAK
    (50) reservedoperation -> . CONTINUE
    (84) address -> . identifier [ integer_series ]
    (82) number -> . INTNUM
    (83) number -> . FLOATNUM
    (72) structure -> . matrix
    (73) structure -> . STRING
    (74) matrix -> . rows
    (75) matrix -> . [ rows ]
    (76) rows -> . [ series ]
    (77) rows -> . [ series ] , rows

    {               shift and go to state 4
    $end            reduce using rule 7 (instruction_set -> .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ID              shift and go to state 17
    -               shift and go to state 21
    ZEROS           shift and go to state 22
    ONES            shift and go to state 23
    EYE             shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    INTNUM          shift and go to state 30
    FLOATNUM        shift and go to state 31
    STRING          shift and go to state 33
    [               shift and go to state 29

    start                          shift and go to state 1
    instruction_set                shift and go to state 2
    instruction                    shift and go to state 3
    expression                     shift and go to state 5
    conditional                    shift and go to state 6
    loopconditional                shift and go to state 7
    assignment                     shift and go to state 8
    operation                      shift and go to state 9
    identifier                     shift and go to state 13
    operand                        shift and go to state 14
    function                       shift and go to state 15
    reservedoperation              shift and go to state 16
    address                        shift and go to state 18
    number                         shift and go to state 19
    structure                      shift and go to state 20
    matrix                         shift and go to state 32
    rows                           shift and go to state 34

state 1

    (0) S' -> start .



state 2

    (1) start -> instruction_set .

    $end            reduce using rule 1 (start -> instruction_set .)


state 3

    (5) instruction_set -> instruction . instruction_set
    (5) instruction_set -> . instruction instruction_set
    (6) instruction_set -> . { instruction_set }
    (7) instruction_set -> .
    (2) instruction -> . expression
    (3) instruction -> . conditional
    (4) instruction -> . loopconditional
    (10) expression -> . assignment ;
    (11) expression -> . operation ;
    (61) conditional -> . IF ( condition ) instruction
    (62) conditional -> . IF ( condition ) { instruction_set }
    (63) conditional -> . IF ( condition ) instruction ELSE instruction
    (64) conditional -> . IF ( condition ) { instruction_set } ELSE instruction
    (65) conditional -> . IF ( condition ) instruction ELSE { instruction_set }
    (66) conditional -> . IF ( condition ) { instruction_set } ELSE { instruction_set }
    (67) loopconditional -> . WHILE ( condition ) instruction
    (68) loopconditional -> . WHILE ( condition ) { instruction_set }
    (69) loopconditional -> . FOR identifier = range instruction
    (70) loopconditional -> . FOR identifier = range { instruction_set }
    (12) assignment -> . identifier = operand
    (13) assignment -> . identifier = operation
    (14) assignment -> . identifier assignoperation operand
    (15) assignment -> . identifier assignoperation operation
    (16) operation -> . operand operator operand
    (17) operation -> . operand operator operation
    (18) operation -> . function ( operand )
    (19) operation -> . function ( operation )
    (20) operation -> . reservedoperation
    (21) operation -> . operand selfoperator
    (8) identifier -> . ID
    (9) identifier -> . address
    (26) operand -> . identifier
    (27) operand -> . number
    (28) operand -> . structure
    (29) operand -> . - operand
    (30) operand -> . address
    (40) function -> . ZEROS
    (41) function -> . ONES
    (42) function -> . EYE
    (43) reservedoperation -> . RETURN operation
    (44) reservedoperation -> . RETURN operand
    (45) reservedoperation -> . RETURN
    (46) reservedoperation -> . PRINT series
    (47) reservedoperation -> . PRINT operation
    (48) reservedoperation -> . PRINT operand
    (49) reservedoperation -> . BREAK
    (50) reservedoperation -> . CONTINUE
    (84) address -> . identifier [ integer_series ]
    (82) number -> . INTNUM
    (83) number -> . FLOATNUM
    (72) structure -> . matrix
    (73) structure -> . STRING
    (74) matrix -> . rows
    (75) matrix -> . [ rows ]
    (76) rows -> . [ series ]
    (77) rows -> . [ series ] , rows

    {               shift and go to state 4
    $end            reduce using rule 7 (instruction_set -> .)
    }               reduce using rule 7 (instruction_set -> .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ID              shift and go to state 17
    -               shift and go to state 21
    ZEROS           shift and go to state 22
    ONES            shift and go to state 23
    EYE             shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    INTNUM          shift and go to state 30
    FLOATNUM        shift and go to state 31
    STRING          shift and go to state 33
    [               shift and go to state 29

    instruction                    shift and go to state 3
    instruction_set                shift and go to state 35
    expression                     shift and go to state 5
    conditional                    shift and go to state 6
    loopconditional                shift and go to state 7
    assignment                     shift and go to state 8
    operation                      shift and go to state 9
    identifier                     shift and go to state 13
    operand                        shift and go to state 14
    function                       shift and go to state 15
    reservedoperation              shift and go to state 16
    address                        shift and go to state 18
    number                         shift and go to state 19
    structure                      shift and go to state 20
    matrix                         shift and go to state 32
    rows                           shift and go to state 34

state 4

    (6) instruction_set -> { . instruction_set }
    (5) instruction_set -> . instruction instruction_set
    (6) instruction_set -> . { instruction_set }
    (7) instruction_set -> .
    (2) instruction -> . expression
    (3) instruction -> . conditional
    (4) instruction -> . loopconditional
    (10) expression -> . assignment ;
    (11) expression -> . operation ;
    (61) conditional -> . IF ( condition ) instruction
    (62) conditional -> . IF ( condition ) { instruction_set }
    (63) conditional -> . IF ( condition ) instruction ELSE instruction
    (64) conditional -> . IF ( condition ) { instruction_set } ELSE instruction
    (65) conditional -> . IF ( condition ) instruction ELSE { instruction_set }
    (66) conditional -> . IF ( condition ) { instruction_set } ELSE { instruction_set }
    (67) loopconditional -> . WHILE ( condition ) instruction
    (68) loopconditional -> . WHILE ( condition ) { instruction_set }
    (69) loopconditional -> . FOR identifier = range instruction
    (70) loopconditional -> . FOR identifier = range { instruction_set }
    (12) assignment -> . identifier = operand
    (13) assignment -> . identifier = operation
    (14) assignment -> . identifier assignoperation operand
    (15) assignment -> . identifier assignoperation operation
    (16) operation -> . operand operator operand
    (17) operation -> . operand operator operation
    (18) operation -> . function ( operand )
    (19) operation -> . function ( operation )
    (20) operation -> . reservedoperation
    (21) operation -> . operand selfoperator
    (8) identifier -> . ID
    (9) identifier -> . address
    (26) operand -> . identifier
    (27) operand -> . number
    (28) operand -> . structure
    (29) operand -> . - operand
    (30) operand -> . address
    (40) function -> . ZEROS
    (41) function -> . ONES
    (42) function -> . EYE
    (43) reservedoperation -> . RETURN operation
    (44) reservedoperation -> . RETURN operand
    (45) reservedoperation -> . RETURN
    (46) reservedoperation -> . PRINT series
    (47) reservedoperation -> . PRINT operation
    (48) reservedoperation -> . PRINT operand
    (49) reservedoperation -> . BREAK
    (50) reservedoperation -> . CONTINUE
    (84) address -> . identifier [ integer_series ]
    (82) number -> . INTNUM
    (83) number -> . FLOATNUM
    (72) structure -> . matrix
    (73) structure -> . STRING
    (74) matrix -> . rows
    (75) matrix -> . [ rows ]
    (76) rows -> . [ series ]
    (77) rows -> . [ series ] , rows

    {               shift and go to state 4
    }               reduce using rule 7 (instruction_set -> .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ID              shift and go to state 17
    -               shift and go to state 21
    ZEROS           shift and go to state 22
    ONES            shift and go to state 23
    EYE             shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    INTNUM          shift and go to state 30
    FLOATNUM        shift and go to state 31
    STRING          shift and go to state 33
    [               shift and go to state 29

    instruction_set                shift and go to state 36
    instruction                    shift and go to state 3
    expression                     shift and go to state 5
    conditional                    shift and go to state 6
    loopconditional                shift and go to state 7
    assignment                     shift and go to state 8
    operation                      shift and go to state 9
    identifier                     shift and go to state 13
    operand                        shift and go to state 14
    function                       shift and go to state 15
    reservedoperation              shift and go to state 16
    address                        shift and go to state 18
    number                         shift and go to state 19
    structure                      shift and go to state 20
    matrix                         shift and go to state 32
    rows                           shift and go to state 34

state 5

    (2) instruction -> expression .

    {               reduce using rule 2 (instruction -> expression .)
    IF              reduce using rule 2 (instruction -> expression .)
    WHILE           reduce using rule 2 (instruction -> expression .)
    FOR             reduce using rule 2 (instruction -> expression .)
    ID              reduce using rule 2 (instruction -> expression .)
    -               reduce using rule 2 (instruction -> expression .)
    ZEROS           reduce using rule 2 (instruction -> expression .)
    ONES            reduce using rule 2 (instruction -> expression .)
    EYE             reduce using rule 2 (instruction -> expression .)
    RETURN          reduce using rule 2 (instruction -> expression .)
    PRINT           reduce using rule 2 (instruction -> expression .)
    BREAK           reduce using rule 2 (instruction -> expression .)
    CONTINUE        reduce using rule 2 (instruction -> expression .)
    INTNUM          reduce using rule 2 (instruction -> expression .)
    FLOATNUM        reduce using rule 2 (instruction -> expression .)
    STRING          reduce using rule 2 (instruction -> expression .)
    [               reduce using rule 2 (instruction -> expression .)
    $end            reduce using rule 2 (instruction -> expression .)
    }               reduce using rule 2 (instruction -> expression .)
    ELSE            reduce using rule 2 (instruction -> expression .)


state 6

    (3) instruction -> conditional .

    {               reduce using rule 3 (instruction -> conditional .)
    IF              reduce using rule 3 (instruction -> conditional .)
    WHILE           reduce using rule 3 (instruction -> conditional .)
    FOR             reduce using rule 3 (instruction -> conditional .)
    ID              reduce using rule 3 (instruction -> conditional .)
    -               reduce using rule 3 (instruction -> conditional .)
    ZEROS           reduce using rule 3 (instruction -> conditional .)
    ONES            reduce using rule 3 (instruction -> conditional .)
    EYE             reduce using rule 3 (instruction -> conditional .)
    RETURN          reduce using rule 3 (instruction -> conditional .)
    PRINT           reduce using rule 3 (instruction -> conditional .)
    BREAK           reduce using rule 3 (instruction -> conditional .)
    CONTINUE        reduce using rule 3 (instruction -> conditional .)
    INTNUM          reduce using rule 3 (instruction -> conditional .)
    FLOATNUM        reduce using rule 3 (instruction -> conditional .)
    STRING          reduce using rule 3 (instruction -> conditional .)
    [               reduce using rule 3 (instruction -> conditional .)
    $end            reduce using rule 3 (instruction -> conditional .)
    }               reduce using rule 3 (instruction -> conditional .)
    ELSE            reduce using rule 3 (instruction -> conditional .)


state 7

    (4) instruction -> loopconditional .

    {               reduce using rule 4 (instruction -> loopconditional .)
    IF              reduce using rule 4 (instruction -> loopconditional .)
    WHILE           reduce using rule 4 (instruction -> loopconditional .)
    FOR             reduce using rule 4 (instruction -> loopconditional .)
    ID              reduce using rule 4 (instruction -> loopconditional .)
    -               reduce using rule 4 (instruction -> loopconditional .)
    ZEROS           reduce using rule 4 (instruction -> loopconditional .)
    ONES            reduce using rule 4 (instruction -> loopconditional .)
    EYE             reduce using rule 4 (instruction -> loopconditional .)
    RETURN          reduce using rule 4 (instruction -> loopconditional .)
    PRINT           reduce using rule 4 (instruction -> loopconditional .)
    BREAK           reduce using rule 4 (instruction -> loopconditional .)
    CONTINUE        reduce using rule 4 (instruction -> loopconditional .)
    INTNUM          reduce using rule 4 (instruction -> loopconditional .)
    FLOATNUM        reduce using rule 4 (instruction -> loopconditional .)
    STRING          reduce using rule 4 (instruction -> loopconditional .)
    [               reduce using rule 4 (instruction -> loopconditional .)
    $end            reduce using rule 4 (instruction -> loopconditional .)
    }               reduce using rule 4 (instruction -> loopconditional .)
    ELSE            reduce using rule 4 (instruction -> loopconditional .)


state 8

    (10) expression -> assignment . ;

    ;               shift and go to state 37


state 9

    (11) expression -> operation . ;

    ;               shift and go to state 38


state 10

    (61) conditional -> IF . ( condition ) instruction
    (62) conditional -> IF . ( condition ) { instruction_set }
    (63) conditional -> IF . ( condition ) instruction ELSE instruction
    (64) conditional -> IF . ( condition ) { instruction_set } ELSE instruction
    (65) conditional -> IF . ( condition ) instruction ELSE { instruction_set }
    (66) conditional -> IF . ( condition ) { instruction_set } ELSE { instruction_set }

    (               shift and go to state 39


state 11

    (67) loopconditional -> WHILE . ( condition ) instruction
    (68) loopconditional -> WHILE . ( condition ) { instruction_set }

    (               shift and go to state 40


state 12

    (69) loopconditional -> FOR . identifier = range instruction
    (70) loopconditional -> FOR . identifier = range { instruction_set }
    (8) identifier -> . ID
    (9) identifier -> . address
    (84) address -> . identifier [ integer_series ]

    ID              shift and go to state 17

    identifier                     shift and go to state 41
    address                        shift and go to state 42

state 13

    (12) assignment -> identifier . = operand
    (13) assignment -> identifier . = operation
    (14) assignment -> identifier . assignoperation operand
    (15) assignment -> identifier . assignoperation operation
    (26) operand -> identifier .
    (84) address -> identifier . [ integer_series ]
    (22) assignoperation -> . ADDASSIGN
    (23) assignoperation -> . SUBASSIGN
    (24) assignoperation -> . MULASSIGN
    (25) assignoperation -> . DIVASSIGN

    =               shift and go to state 43
    +               reduce using rule 26 (operand -> identifier .)
    -               reduce using rule 26 (operand -> identifier .)
    *               reduce using rule 26 (operand -> identifier .)
    /               reduce using rule 26 (operand -> identifier .)
    DOTADD          reduce using rule 26 (operand -> identifier .)
    DOTSUB          reduce using rule 26 (operand -> identifier .)
    DOTMUL          reduce using rule 26 (operand -> identifier .)
    DOTDIV          reduce using rule 26 (operand -> identifier .)
    '               reduce using rule 26 (operand -> identifier .)
    [               shift and go to state 45
    ADDASSIGN       shift and go to state 46
    SUBASSIGN       shift and go to state 47
    MULASSIGN       shift and go to state 48
    DIVASSIGN       shift and go to state 49

    assignoperation                shift and go to state 44

state 14

    (16) operation -> operand . operator operand
    (17) operation -> operand . operator operation
    (21) operation -> operand . selfoperator
    (31) operator -> . +
    (32) operator -> . -
    (33) operator -> . *
    (34) operator -> . /
    (35) operator -> . DOTADD
    (36) operator -> . DOTSUB
    (37) operator -> . DOTMUL
    (38) operator -> . DOTDIV
    (39) selfoperator -> . '

    +               shift and go to state 52
    -               shift and go to state 53
    *               shift and go to state 54
    /               shift and go to state 55
    DOTADD          shift and go to state 56
    DOTSUB          shift and go to state 57
    DOTMUL          shift and go to state 58
    DOTDIV          shift and go to state 59
    '               shift and go to state 60

    operator                       shift and go to state 50
    selfoperator                   shift and go to state 51

state 15

    (18) operation -> function . ( operand )
    (19) operation -> function . ( operation )

    (               shift and go to state 61


state 16

    (20) operation -> reservedoperation .

    ;               reduce using rule 20 (operation -> reservedoperation .)
    EQ              reduce using rule 20 (operation -> reservedoperation .)
    NOTEQ           reduce using rule 20 (operation -> reservedoperation .)
    LESS            reduce using rule 20 (operation -> reservedoperation .)
    LESSEQ          reduce using rule 20 (operation -> reservedoperation .)
    MORE            reduce using rule 20 (operation -> reservedoperation .)
    MOREEQ          reduce using rule 20 (operation -> reservedoperation .)
    )               reduce using rule 20 (operation -> reservedoperation .)


state 17

    (8) identifier -> ID .
